--- a/Home Page/Destinations/styles.css
+++ b/Home Page/Destinations/styles.css
@@ -33,7 +33,7 @@ h6,
 }
 
 
-
+/* Section Common Styles */
 .section__container {
   max-width: var(--max-width);
   margin: auto;
@@ -98,7 +98,7 @@ body {
   scroll-behavior: smooth;
 }
 
-
+/* Choose Section */
 .choose__container {
   display: grid;
   gap: 2rem;
@@ -150,6 +150,7 @@ body {
   padding-bottom: 1rem;
 }
 
+/* Popular Section */
 .popular__bg {
   position: absolute;
   left: 75%;
@@ -288,6 +289,7 @@ body {
   color: var(--text-light);
 }
 
+/* Client Testimonials Section */
 .client__container {
   position: relative;
   isolation: isolate;
@@ -554,6 +556,7 @@ body {
   color: black;
 }
 
+/* Hero Section */
 .hero {
   background: url('./—Pngtree—aerial\ view\ wooden\ boat\ on_16053272.jpg') no-repeat center center/cover;
   height: 100vh;
@@ -563,6 +566,7 @@ body {
   position: relative;
 }
 
+/* Hero Overlay */
 .overlay {
   padding: 50px;
   width: 100%;
@@ -602,7 +606,7 @@ body {
   color: black;
 }
 
-
+/* Search Box */
 .search-box {
   background: white;
   color: black;
@@ -719,7 +723,7 @@ body {
 
 
 
-
+/* Hero Section */
 .hero {
   background: url('./—Pngtree—aerial\ view\ wooden\ boat\ on_16053272.jpg') no-repeat center center/cover;
   height: 100vh;
@@ -960,7 +964,7 @@ body {
   }
 }
 
-
+/* ===== Desktop Only ===== */
 .hero .overlay {
 
   flex-direction: column;
@@ -998,6 +1002,7 @@ body {
   }
 }
 
+/* Navigation */
 header {
   position: fixed !important;
   top: 0;
